--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "djjerry85/atol-kkm-client",
     "description": "HTTP Client for using with kkmserver. Fork zeroabe/atol-kkm-client",
-    "version": "0.2.1-dev",
+    "version": "1.0.0",
     "license": "MIT",
     "authors": [
         {
