--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     },
     "require": {
-        "php": "^7.2",
+        "php": "^7.4|^8.0",
         "ramsey/uuid": "^4.1",
         "guzzlehttp/guzzle": "^7.0.1",
         "jms/serializer": "^1.7",
